Fixed some styling and display issues when viewed on smaller displays.

--- a/SeleniumScaffolder.Web/wwwroot/css/app.css
+++ b/SeleniumScaffolder.Web/wwwroot/css/app.css
@@ -61,7 +61,6 @@ app {
 
 .sidebar .logo {
     color: #c86dd7;
-    margin-left: 20px;
     text-decoration: none
 }
 
@@ -243,7 +242,6 @@ table {
 
 .logo a {
     color: #c86dd7;
-    margin-left: 20px;
     text-decoration: none
 }
 
